add header+title background

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -21,7 +21,7 @@
 		right: -100%
 		top: 80px
 		z-index: -1
-		background: rgba(0, 0, 0, .9)
+		/*background: rgba(0, 0, 0, .9)*/
 		transition: all .3s
 
 		ul
