--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -7,17 +7,15 @@
 	position: fixed
 	right: 0
 	left: 0
-	background-color: rgba(0, 0, 0, .5)
-	padding: 15px 0
+	padding: 15px 0 0
 	transition: all .3s
 	z-index: 1001
 
 	&-active
-		background-color: rgba(0, 0, 0, .8)
 		padding: 5px 0
 
 	&-menu
-		background-color: rgba(0, 0, 0, .8)
+		background-color: rgba(10, 0, 0, .8)
 		padding: 5px 0
 
 	&__container
@@ -26,6 +24,10 @@
 		flex-direction: row
 		justify-content: space-between
 		align-items: center
+	&__logo
+		width: 25%
+	&__post
+		width 17%
 	
 .nav
 	ul
@@ -34,14 +36,19 @@
 		justify-content: space-between
 
 	li
-		margin-right: 55px
+		margin-right: 20px
 		&:last-child
 			margin-right: 0
+
+.section
+	height: 100vh
+	background-image: url(../img/title.png)
+	background-size: cover
+	background-position: top
 
 .grid-item
 	width: 100%
 	height: 100px
-	background: #000
 
 	&--width2
 		background: red
