--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -69,8 +69,8 @@ input, textarea
 	&::placeholder
 		color: #808080
 		font-size: 12px
-		text-transform: uppercase
-		line-height: 1
+		// text-transform: uppercase
+		// line-height: 1
 
 b, strong
 	font-weight: 700
