--- a/app/sass/_base/_btn.sass
+++ b/app/sass/_base/_btn.sass
@@ -17,6 +17,7 @@
 	color: white
 	font-weight: 700
 	letter-spacing: .2px
+	box-shadow: 0px 12px 20px 0px rgba(255, 186, 28, 0.25)
 
 	&:hover
 		outline: none
