--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,18 +13,14 @@
 	&-active
 		background-color: rgba(0, 0, 0, .8)
 		padding: 5px 0
-
 	&__container
 		position: relative
 		display: flex
 		flex-direction: row
 		justify-content: space-between
 		align-items: center
-
-img
-	display: inline-block
-	max-width: 100%
-	height: auto
+	&-callback
+		text-align: right
 
 .nav
 	display: flex
@@ -38,7 +34,40 @@ img
 a
 	text-decoration: none
 	color: white
+	&:hover
+		color: white
+		text-decoration: none
+		border-bottom: 1px solid orange
+strong
+	display: block
+	font-family: OpenSans
+	font-weight: 400
+	font-size: 20px
+	& span
+		font-weight: 700
+	
+.modal
+	background-color: rgba(30,80,210,0.75)
+	border-radius: 10px
+	& .btn
+		padding: 10px
+		min-width: 150px
+	&-personal
+		color: orange
+		&:hover
+			text-decoration: underline solid
 
+.wrapper
+	text-align: center
+.form-1 h3
+	margin-bottom: 15px
+.footer__form_line input
+	min-width: 200px
+	border-radius: 10px
+	text-align: center
+	padding: 5px
+.wrap-form-btn
+	padding: 0 10px
 
 
 .hero
@@ -47,9 +76,16 @@ a
 		position: relative
 		margin: 190px 0 85px
 	&-title
+		font-family: OpenSans
+		font-weight: 400
 		font-size: 34px
-		line-height: 1.5
+		line-height: 50px
 		margin-bottom: 15px
+		text-shadow: 0px 2px 2px rgba(23, 22, 22, 0.5)
+		& span
+			font-size: 32px
+			font-weight: 900
+		
 	&-subtitle
 		margin-bottom: 45px
 		&__item
@@ -105,7 +141,7 @@ a
 		margin-bottom: 55px
 		text-align: center
 		font-size: 36px
-		&-span
+		& span
 			font-weight: 900
 	&-item
 		&__img
@@ -133,19 +169,25 @@ a
 	&-title
 		font-size: 36px
 		margin-bottom: 17px
-		&-span
+		line-height: 1.2
+		text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2)
+		& span
 			font-weight: 900
 	&-subtitle
 		margin-bottom: 58px
 		font-size: 16px
-
-.form-controol
-		padding: 13px 30px
-		border-radius: 5px
-		font-weight: 400
-		font-size: 12px
-		border: 2px solid white
-
+		line-height: 1.5
+	&-form
+		// display: flex
+		// justify-content: space-between
+		&-input
+			margin-right: 30px
+			padding: 13px 20px
+			border-radius: 5px
+			font-weight: 400
+			font-size: 12px
+			border: 2px solid white
+			min-width: 270px
 	
 
 .decide
@@ -230,6 +272,9 @@ a
 	&-span
 		font-weight: 900
 
+.guarantees
+	background-color: #fafafa
+
 .guarantees-item
 	padding-left: 83px
 	position: relative
@@ -258,7 +303,11 @@ a
 			font-size: 24px
 			line-height: normal
 
-
+.question,
+.history,
+.howwork,
+.review
+	color: black
 
 
 
