remove docs in settings

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -295,13 +295,14 @@ strong
 			position: absolute
 			left: 7px
 			top: 0
-	&__span
-		&--32
-			font-size: 32px
-			line-height: normal
-		&--24
-			font-size: 24px
-			line-height: normal
+			
+.guarantees-item__span
+	&--32
+		font-size: 32px
+		line-height: normal
+	&--24
+		font-size: 24px
+		line-height: normal
 
 .question,
 .history,
