--- a/app/sass/_base/_btn.sass
+++ b/app/sass/_base/_btn.sass
@@ -2,18 +2,19 @@
 	position: relative
 	display: inline-block
 	min-width: 270px
-	border: 2px solid #ffbb1c
+	border: 2px solid rgb(255, 187, 28)
 	outline: none
-	padding: 13px 30px
-	border-radius: 50px
+	padding: 16px 30px
+	border-radius: 25px
 	background: $accent
-	background: linear-gradient(to top, #e5700f, #feba1c)
+	background: linear-gradient(to top, rgb(229,112,15), rgb(254,186,28))
 	text-decoration: none
 	vertical-align: middle
 	text-align: center
 	text-transform: uppercase
 	font-family: OpenSans
 	font-size: 12px
+	// line-height: 1.2
 	color: white
 	font-weight: 700
 	letter-spacing: .2px
@@ -38,5 +39,47 @@
 		box-shadow: 0 5px 10px rgba($text, .4)
 		color: white
 		background: linear-gradient(to top, #feba19, #cf4c07)
+
+.btn-hollow
+	position: relative
+	display: inline-block
+	min-width: 270px
+	border: 1px solid #ffbb1c
+	outline: none
+	padding: 17px 30px
+	border-radius: 50px
+	text-decoration: none
+	vertical-align: middle
+	text-align: center
+	text-transform: uppercase
+	font-family: OpenSans
+	font-size: 12px
+	color: #ffbb1c
+	background-color: #fff
+	font-weight: 700
+	letter-spacing: .5px
+
+	&:hover
+		outline: none
+		border: 1px solid #ffbb1c
+		text-decoration: none
+		cursor: pointer
+		transition: all .3s
+		box-shadow: 0 5px 10px rgba($text, .4)
+		color: white
+		background: linear-gradient(to top, #cf4c07, #feba19)
+
+	&:focus
+		outline: none
+		border: 1px solid #ffbb1c
+		text-decoration: none
+		cursor: pointer
+		transition: all .3s
+		box-shadow: 0 5px 10px rgba($text, .4)
+		color: white
+		background: linear-gradient(to top, #feba19, #cf4c07)
+
+
+
 
 
