--- a/app/sass/_base/_btn.sass
+++ b/app/sass/_base/_btn.sass
@@ -30,7 +30,7 @@
 		color: white
 		background: linear-gradient(to top, #cf4c07, #feba19)
 
-	&:focus
+	&:active
 		outline: none
 		border: 2px solid #ffbb1c
 		text-decoration: none
@@ -39,6 +39,8 @@
 		box-shadow: 0 5px 10px rgba($text, .4)
 		color: white
 		background: linear-gradient(to top, #feba19, #cf4c07)
+	&:focus
+		outline: none
 
 .btn-hollow
 	position: relative
@@ -69,7 +71,7 @@
 		color: white
 		background: linear-gradient(to top, #cf4c07, #feba19)
 
-	&:focus
+	&:active
 		outline: none
 		border: 1px solid #ffbb1c
 		text-decoration: none
@@ -78,6 +80,8 @@
 		box-shadow: 0 5px 10px rgba($text, .4)
 		color: white
 		background: linear-gradient(to top, #feba19, #cf4c07)
+	&:focus
+		outline: none
 
 
 
