--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -29,6 +29,14 @@ a, div, ul, li, input, textarea
 	&:hover,
 	&:focus
 		outline: none
+a 
+	&:hover
+		text-decoration: none
+
+img
+	max-width: 100%
+	height: auto
+	display: inline-block
 
 section
 	overflow: hidden
