--- a/app/sass/_base/_hamburger.sass
+++ b/app/sass/_base/_hamburger.sass
@@ -27,7 +27,7 @@
 		top: 0
 		width: 35px
 		height: 3px
-		background-color: #000
+		background-color: #fff
 		border-radius: 4px
 		transition: all .2s
 		bottom: 0
@@ -38,7 +38,8 @@
 			position: absolute
 			right: 0
 			top: -10px
-			background-color: #000
+			background-color: transparent
+			background-color: #fff
 			width: 35px
 			height: 3px
 			transition: transform 0s 0.1s
@@ -49,7 +50,7 @@
 			position: absolute
 			right: 0
 			top: -20px
-			background-color: #000
+			background-color: #fff
 			width: 35px
 			height: 3px
 			transition: transform 0s 0.1s
@@ -62,7 +63,9 @@
 			transform: rotateY(180deg)
 			&::before
 				transform: translate3d(0, 0px, 0) rotate(45deg)
+				background-color: #fff
 			&::after
 				transform: translate3d(0, 10px, 0) rotate(-45deg)
+				background-color: #fff
 
 
