--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -1,9 +1,9 @@
 .modal
 	position: relative
 	overflow: hidden
-	max-width: 320px
+	max-width: 700px
 	height: auto
-	padding: 50px
+	padding: 50px 150px 40px
 	background-color: #fff
 	z-index: 1
 
@@ -19,8 +19,8 @@
 		font-weight: 400
 
 	.btn
-		width: 100%
-		padding: 18px 0
+		// width: 100%
+		padding: 16px 0
 		font-size: 12px
 
 	.close
@@ -32,6 +32,7 @@
 		background-repeat: no-repeat
 		background-size: cover
 		background-position: center
+		color: black
 		width: 20px
 		height: 20px
 		border: none
