--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -2,65 +2,110 @@
 @media only screen and (max-width : 1200px)
 
 	.header
+		&-logo__title
+			font-size: 19px
+	.nav
+		font-size: 11px
+		&__item 
+			margin-right: 21px
+	.header-callback__tel
+		font-size: 15px
 
-
-@media only screen and (max-width : 992px)
-	#thanks
-		padding: 40px
+	.hero
+		&-content
+			margin: 156px 0 70px
+		&-title
+			margin-bottom: 37px
+			font-size: 32px
+			& span 
+				font-size: 30px
+		&-subtitle
+			margin-bottom: 29px
+		 &__item
+				font-size: 16px
+				margin-bottom: 8px
+		&-benefits
+			margin-top: 115px
+			font-size: 12px
+	.man 
+		width: 397px
 
 	.modal
-		width: 320px
-		padding: 40px
+		max-width: 600px
+		padding: 40px 120px 30px
+		font-size: 13px
+		p 
+			font-size: 11px
+
+@media only screen and (max-width : 992px)
+
+	.header
+		&-callback
+			display: none
+
+	.hero
+		&-content
+			margin: 120px 0 54px
+		&-title
+			margin-bottom: 28px
+			font-size: 30px
+			& span 
+				font-size: 28px
+		&-subtitle
+			margin-bottom: 22px
+		 &__item
+				font-size: 15px
+				margin-bottom: 6px
+		&-benefits
+			margin-top: 89px
+			width: 100%
+			font-size: 12px
+	.man 
+		display: none
+		width: 350px
+
+	.modal
+		max-width: 400px
+		padding: 20px 45px 15px
+		font-size: 12px
+		p 	
+			font-size: 10px
+		h3
+			margin-bottom: 20px
 
 	.nav
 		position: fixed
-		display: block
-		width: 320px
+		display: flex
+		width: 100%
 		height: 100%
 		flex-direction: column
+		justify-content: center
 		right: -100%
-		top: 54px
+		top: 0px
+		padding-top: 51px
 		z-index: -1
-		/*background: rgba(0, 0, 0, .9)*/
+		background: rgba(0, 0, 0, .9)
 		transition: all .3s
+		text-align: center
+		text-transform: uppercase
+		font-size: 12px
 
-		ul
-			display: flex
-			flex-direction: column
-			justify-content: center
-			margin-top: 40px
-			margin-left: 40px
-
-		li
+	.header-nav.nav-active .nav
+		right: 0
+		z-index: 100
+		.nav-item
 			margin: 0
-			margin-bottom: 10px
-
-		a
+			margin-bottom: 30px
+		& a
 			color: #fff
 			display: block
-			&::before
-				content: ''
-				width: 0
-				transform: scale(0)
-				transition: all .3s
-				position: absolute
-				bottom: 0
-				width: 80%
-				height: 1px
-				background-color: $accent
-				z-index: -1
-
+			text-decoration: none
 			&:hover
-				color: $accent
-				text-decoration: none
-				&::before
-					transform: scale(1)
-
-			&:focus
-				color: $accent
-				text-decoration: none
-				&::before
-					transform: scale(1)
+				color: orange
+				border: none
+				font-size: 16px
+			&:active
+				font-weight: 900
 
 	.hamburger
 		display: block
@@ -71,35 +116,79 @@
 		right: 0
 
 
-
 @media only screen and (max-width : 767px)
+
 	.header
-
-@media only screen and (max-width : 576px)
-	.header
-
-@media only screen and (max-width : 480px)
-	.header
-		&-menu
-			background-color: rgba(10, 0, 0, .8)
-			padding: 5px 0
-		
-		&-callback
-			display: none
-
-	.header-logo
-		&__title
-			font-size: 14px
-
-		&__subtitle
+		&-logo__title
+			font-size: 16px
+		&-logo__subtitle
+			font-size: 12px
+	.hero
+		&-content
+			margin: 105px 0 47px
+		&-title
+			margin-bottom: 20px
+			font-size: 24px
+			& span 
+				font-size: 24px
+		&-subtitle
+			margin-bottom: 20px
+		 &__item
+				font-size: 13px
+				margin-bottom: 5px
+		&-benefits
+			margin-top: 67px
 			font-size: 10px
 
-	.header-nav.nav-active .nav
-		right: 0
-		z-index: 100
+	.modal
+		padding: 15px 40px 10px
+		h3
+			margin-bottom: 15px
 
-	.nav
-		background-color: #000
-		padding: 15px
-		text-align: center
-		text-transform: uppercase
+
+
+@media only screen and (max-width : 576px)
+	
+	.hero
+		&-content
+			margin: 90px 0 40px
+			&-wrap 	
+				max-width: 420px
+				margin: auto
+		&-title 
+			font-size: 19px
+			& span 
+				font-size: 19px
+		&-benefits
+			margin-top: 50px
+			flex-direction: column
+			align-items: center
+			font-size: 12px
+			&-item 
+				min-width: 220px
+				margin-bottom: 25px
+				padding-left: 70px
+	.hero-btn
+		display: block
+		margin: 0 auto
+	.footer
+		p
+			font-size: 12px
+
+@media only screen and (max-width : 480px)
+
+	.hero
+		&-content
+			margin: 75px 0 10px
+			&-wrap 	
+				max-width: 320px
+		&-title 
+			font-size: 18px
+		&-benefits
+			margin-top: 40px
+	.modal
+		max-width: 320px
+	.btn-hollow
+		min-width: 240px
+	.footer__form_line input
+		min-width: 240px
