--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -5,6 +5,14 @@
 textarea
 	resize: none
 
+a 
+	text-decoration: none
+	color: white
+	&:hover
+		color: white
+		text-decoration: none
+		border-bottom: 1px solid orange
+
 .header
 	position: fixed
 	right: 0
@@ -16,7 +24,7 @@ textarea
 	&-active
 		background-color: rgba(0, 0, 0, .8)
 		padding: 5px 0
-	&__container
+	&-container
 		position: relative
 		display: flex
 		flex-direction: row
@@ -38,84 +46,65 @@ textarea
 	flex-direction: row
 	justify-content: space-between
 	font-size: 12px
-	&__item
+	&-item
 		margin-right: 25px
 		&:last-child
 		 margin-right: 0
 
-a
-	text-decoration: none
-	color: white
-	&:hover
-		color: white
-		text-decoration: none
-		border-bottom: 1px solid orange
-strong
+.header-callback__tel
 	display: block
 	font-family: OpenSans
 	font-weight: 400
 	font-size: 20px
 	& span
 		font-weight: 700
-img
-	max-width: 100%
-	height: auto
-	display: inline-block
-	
-.modal
-	background-color: rgba(30,80,210,0.75)
-	border-radius: 10px
-	& .btn
-		padding: 10px
-		min-width: 150px
-	&-personal
-		color: orange
-		// &:hover
-		// 	// text-decoration: underline solid
-
-.wrapper
-	text-align: center
-.form-1 h3
-	margin-bottom: 15px
-.footer__form_line input
-	min-width: 200px
-	border-radius: 10px
-	text-align: center
-	padding: 5px
-.wrap-form-btn
-	padding: 0 10px
-
 
 .hero
 	background: url(../img/title.png) no-repeat center center / cover
-	&__content
+	&-content
 		position: relative
 		margin: 190px 0 85px
 	&-title
 		font-family: OpenSans
 		font-weight: 400
 		font-size: 34px
-		line-height: 50px
+		line-height: 1.47
 		margin-bottom: 45px
 		text-shadow: 0px 2px 2px rgba(23, 22, 22, 0.5)
 		& span
 			font-size: 32px
 			font-weight: 900
-		
 	&-subtitle
 		margin-bottom: 35px
 		&__item
+			position: relative
 			font-size: 18px
 			margin-bottom: 10px
+			padding-left: 25px
+			&::before
+				content: ''
+				background: url(../img/dash.png)
+				width: 18px
+				height: 1px
+				position: absolute
+				top: 0
+				bottom: 0
+				left: 0
+				margin: auto
 	&-benefits
 		width: 63%
 		margin-top: 140px
 		display: flex
+		flex-direction: row
 		justify-content: space-between
 		font-size: 14px
 		&-item
 			position: relative
 			padding-left: 55px
+			display: flex
+			flex-direction: column
+			justify-content: space-between
+			// flex: 1
 			&::after
 				content: ''
 				background: url('../img/money.png') no-repeat center top / cover
@@ -144,11 +133,36 @@ img
 				background: url('../img/house-key.png') no-repeat center top / cover
 				width: 45px
 				height: 35px
+			&__title 
+				font-weight: 900
+				margin-bottom: 7px
 
 .man
 	position: absolute
 	left: 63%
 	bottom: -135px
+
+.modal
+	color: #000
+	font-size: 14px
+	&-personal
+		color: orange
+		&:hover
+			color: orange
+.wrapper
+	text-align: center
+.form 
+	h3
+		margin-bottom: 25px
+	p 
+		font-size: 12px
+	.btn-hollow
+		padding: 12px 30px
+		margin-bottom: 10px
+.footer__form_line input
+	min-width: 270px
+	text-align: center
+	padding: 5px
 
 
 .whywe
