adaptive for 2nd section

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -82,15 +82,9 @@ a
 			margin-bottom: 10px
 			padding-left: 25px
 			&::before
-				content: ''
-				background: url(../img/dash.png)
-				width: 18px
-				height: 1px
+				content: '\2014'
 				position: absolute
-				top: 0
-				bottom: 0
 				left: 0
-				margin: auto
 	&-benefits
 		width: 63%
 		margin-top: 140px
@@ -167,7 +161,7 @@ a
 
 .whywe
 	color: black
-	padding: 80px 0px
+	padding: 80px 0
 	&-title
 		margin-bottom: 55px
 		text-align: center
