--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -10,7 +10,6 @@
 			margin-right: 21px
 	.header-callback__tel
 		font-size: 15px
-
 	.hero
 		&-content
 			margin: 156px 0 70px
@@ -37,12 +36,25 @@
 		p 
 			font-size: 11px
 
+	.whywe
+		padding: calc(80px *0.83) 0 41px
+		&-title
+			margin-bottom: calc(55px *0.83)
+		&-item
+			margin-bottom: calc(30px *0.83)
+			&__title
+				font-size: 18px
+				margin-bottom: calc(30px *0.83)
+			&__subtitle
+				font-size: 13px
+		&-wrap
+			margin-bottom: calc(30px *0.83)
+
 @media only screen and (max-width : 992px)
 
 	.header
 		&-callback
 			display: none
-
 	.hero
 		&-content
 			margin: 120px 0 54px
@@ -63,7 +75,6 @@
 	.man 
 		display: none
 		width: 350px
-
 	.modal
 		max-width: 400px
 		padding: 20px 45px 15px
@@ -72,7 +83,6 @@
 			font-size: 10px
 		h3
 			margin-bottom: 20px
-
 	.nav
 		position: fixed
 		display: flex
@@ -89,7 +99,6 @@
 		text-align: center
 		text-transform: uppercase
 		font-size: 12px
-
 	.header-nav.nav-active .nav
 		right: 0
 		z-index: 100
@@ -106,15 +115,27 @@
 				font-size: 16px
 			&:active
 				font-weight: 900
-
 	.hamburger
 		display: block
 		z-index: 1001
 		right: 15px
-
 	.hamburger-box
 		right: 0
 
+	.whywe
+		padding: calc(80px *0.63) 0 31px
+		&-title
+			margin-bottom: calc(55px *0.63)
+			font-size: 32px
+		&-item
+			margin-bottom: calc(30px *0.63)
+			&__title
+				font-size: 15px
+				margin-bottom: calc(30px *0.63)
+			&__subtitle
+				font-size: 12px
+		&-wrap
+			margin-bottom: calc(30px *0.63)
 
 @media only screen and (max-width : 767px)
 
@@ -145,16 +166,30 @@
 		h3
 			margin-bottom: 15px
 
-
+	.whywe
+		padding: calc(80px *0.48) 0 24px
+		&-title
+			margin-bottom: calc(55px *0.48)
+			font-size: 30px
+		&-item
+			margin-bottom: calc(30px *0.48)
+			&__title
+				font-size: 15px
+				margin-bottom: calc(30px *0.48)
+			&__subtitle
+				font-size: 12px
+		&-wrap
+			margin-bottom: calc(30px *0.48)
 
 @media only screen and (max-width : 576px)
-	
+
 	.hero
 		&-content
 			margin: 90px 0 40px
-			&-wrap 	
-				max-width: 420px
-				margin: auto
+			text-align: center
+			&-wrap
+				display: inline-block
+				text-align: left
 		&-title 
 			font-size: 19px
 			& span 
@@ -168,9 +203,23 @@
 				min-width: 220px
 				margin-bottom: 25px
 				padding-left: 70px
-	.hero-btn
-		display: block
-		margin: 0 auto
+
+		.whywe
+		padding: calc(80px *0.48) 0 24px
+		&-title
+			margin-bottom: calc(55px *0.48)
+			font-size: 28px
+		&-item
+			text-align: center
+			margin-bottom: calc(30px *0.48)
+			&__title
+				font-size: 14px
+				margin-bottom: calc(30px *0.48)
+			&__subtitle
+				font-size: 12px
+		&-wrap
+			margin-bottom: calc(30px *0.48)
+
 	.footer
 		p
 			font-size: 12px
@@ -179,9 +228,9 @@
 
 	.hero
 		&-content
-			margin: 75px 0 10px
+			margin: 80px 0 10px
 			&-wrap 	
-				max-width: 320px
+				// max-width: 320px
 		&-title 
 			font-size: 18px
 		&-benefits
