adaptive first half

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -50,6 +50,55 @@
 		&-wrap
 			margin-bottom: calc(30px *0.83)
 
+	.consultation
+		padding: calc(90px*0.83) 0px (99px*0.83)
+		&-title
+			font-size: 34px
+			margin-bottom: calc(17px*0.83)
+		&-subtitle
+			margin-bottom: calc(58px*0.83)
+			font-size: 15px
+
+	.decide
+		padding: calc(85px*0.83) 0 calc(34px*0.83)
+		&-title
+			margin-bottom: calc(50px*0.83)
+		&-item
+			margin-bottom: calc(51px*0.83)
+			&-wrap
+				margin-bottom: calc(11px*0.83)
+
+	.cost
+		padding: calc(141px*0.83) 0 calc(111px*0.83)
+		&-title
+			font-size: 34px
+			margin-bottom: calc(42px*0.83)
+	.cost-item
+		margin-bottom: calc(30px*0.83)
+		&-span
+			margin: 0 18px
+		&__title
+			min-width: 160px
+			font-size: 22px
+		&__subtitle
+			font-size: 16px
+			margin-bottom: calc(37px*0.83)
+
+	.guarantees
+		padding: calc(82px*0.83) 0 calc(24px*0.83)
+		&-title
+			margin-bottom: calc(76px*0.83)
+			font-size: 34px
+	.guarantees-item
+		padding-left: 80px
+		margin-bottom: calc(62px*0.83)
+		&__subtitle
+			font-size: 13px
+		&__span--32
+			font-size: 29px
+		&__span--24
+			font-size: 20px
+
 @media only screen and (max-width : 992px)
 
 	.header
@@ -137,6 +186,59 @@
 		&-wrap
 			margin-bottom: calc(30px *0.63)
 
+	.consultation
+		padding: calc(90px*0.63) 0px (99px*0.63)-20px
+		&-title
+			font-size: 32px
+			margin-bottom: calc(17px*0.63)
+		&-subtitle
+			margin-bottom: calc(58px*0.63)
+		&-form
+			&-input
+				width: 100%
+				text-align: center
+				margin-bottom: 20px
+			&-btn 
+				width: 100%
+
+	.decide
+		padding: calc(85px*0.63) 0 calc(34px*0.63)
+		&-title
+			font-size: 32px
+			margin-bottom: calc(50px*0.63)
+		&-item
+			margin-bottom: calc(51px*0.63)
+			&__title
+				font-size: 16px
+			&__subtitle
+				font-size: 12px
+			&-wrap
+				margin-bottom: calc(11px*0.63)
+
+	.cost
+		padding: calc(141px*0.63) 0 calc(111px*0.63)
+		&-title
+			font-size: 32px
+			margin-bottom: calc(42px*0.63)
+	.cost-item
+		margin-bottom: calc(30px*0.63)
+		&-span
+			margin: 0 14px
+		&__title
+			min-width: 140px
+			font-size: 19px
+		&__subtitle
+			font-size: 14px
+			margin-bottom: calc(37px*0.63)
+
+	.guarantees
+		padding: calc(82px*0.63) 0 calc(24px*0.63)
+		&-title
+			margin-bottom: calc(76px*0.63)
+	.guarantees-item
+		margin-bottom: calc(62px*0.63)
+
+
 @media only screen and (max-width : 767px)
 
 	.header
@@ -181,6 +283,62 @@
 		&-wrap
 			margin-bottom: calc(30px *0.48)
 
+	.consultation
+		padding: calc(90px*0.48) 0px (99px*0.48)
+		&-title
+			font-size: 30px
+			margin-bottom: calc(17px*0.48)
+		&-subtitle
+			margin-bottom: calc(58px*0.48)
+			font-size: 14px
+		&-form
+			&-input
+				font-size: 12px
+
+	.decide
+		padding: calc(85px*0.48) 0 calc(34px*0.48)
+		&-title
+			margin-bottom: calc(50px*0.48)
+		&-item
+			margin-bottom: calc(51px*0.48)
+			&-wrap
+				margin-bottom: calc(11px*0.48)
+
+	.cost
+		padding: calc(141px*0.48) 0 calc(111px*0.48)
+		&-title
+			font-size: 30px
+			margin-bottom: calc(42px*0.48)
+	.cost-item
+		margin-bottom: calc(30px*0.48)
+		&-span
+			margin: 0 10px
+		&__title
+			min-width: 120px
+			font-size: 16px
+			&--hide
+				display: none
+		&__title2
+			display: block
+		&__subtitle
+			font-size: 12px
+			margin-bottom: calc(37px*0.48)
+
+	.guarantees
+		padding: calc(82px*0.48) 0 calc(24px*0.48)
+		&-title
+			margin-bottom: calc(76px*0.48)
+			font-size: 32px
+	.guarantees-item
+		padding-left: 80px
+		margin-bottom: calc(62px*0.48)
+		&__subtitle
+			font-size: 13px
+		&__span--32
+			font-size: 26px
+		&__span--24
+			font-size: 18px
+
 @media only screen and (max-width : 576px)
 
 	.hero
@@ -204,25 +362,56 @@
 				margin-bottom: 25px
 				padding-left: 70px
 
-		.whywe
-		padding: calc(80px *0.48) 0 24px
+	.whywe
 		&-title
-			margin-bottom: calc(55px *0.48)
 			font-size: 28px
 		&-item
-			text-align: center
-			margin-bottom: calc(30px *0.48)
 			&__title
 				font-size: 14px
-				margin-bottom: calc(30px *0.48)
-			&__subtitle
-				font-size: 12px
-		&-wrap
-			margin-bottom: calc(30px *0.48)
 
 	.footer
 		p
 			font-size: 12px
+
+	.consultation
+		&-title
+			font-size: 26px
+		&-subtitle
+			font-size: 13px
+
+	.decide
+		&-title
+			font-size: 30px
+		&-item
+			&__title
+				font-size: 14px
+			&__subtitle
+				font-size: 12px
+
+	.cost
+		&-title
+			font-size: 28px
+	.cost-item
+		&:nth-child(2)
+			margin-bottom: calc(30px*0.48)
+		&-span
+			margin: 0 8px
+		&__title
+			min-width: 110px
+			font-size: 16px
+		&__subtitle
+			display: none
+
+	.guarantees
+		&-title
+			font-size: 30px
+	.guarantees-item
+		&__subtitle
+			font-size: 12px
+		&__span--32
+			font-size: 24px
+		&__span--24
+			font-size: 16px
 
 @media only screen and (max-width : 480px)
 
@@ -241,3 +430,27 @@
 		min-width: 240px
 	.footer__form_line input
 		min-width: 240px
+
+	.whywe
+		&-title
+			font-size: 26px
+		&-item
+			&__title
+				font-size: 13px
+			&__subtitle 
+				font-size: 12px
+
+	.consultation
+		&-title
+			font-size: 24px
+		&-subtitle
+			font-size: 12px
+
+	.cost
+		&-title
+			font-size: 26px
+	.cost-item
+		&-span
+			display: none
+		&__title
+			font-size: 16px
