--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -212,8 +212,6 @@ a
 		font-size: 16px
 		line-height: 1.5
 	&-form
-		// display: flex
-		// justify-content: space-between
 		&-input
 			margin-right: 30px
 			padding: 13px 20px
@@ -247,7 +245,7 @@ a
 		&__subtitle
 			font-size: 13px
 			font-weight: 400
-			line-height: 24px
+			line-height: 1.85
 		&__img
 			margin-right: 23px
 		&-wrap
@@ -271,7 +269,6 @@ a
 		margin-bottom: 42px
 	&-span
 		font-weight: 900
-
 .cost-item
 	margin: 0 auto
 	margin-bottom: 30px
@@ -289,12 +286,14 @@ a
 		text-align: left
 		font-size: 24px
 		font-weight: 900
-		line-height: 36px
+		line-height: 1.5
 		position: relative
+	&__title2
+		display: none
 	&__subtitle
 		font-size: 18px
-		line-height: 27px
-		margin-bottom: 37.5px
+		line-height: 1.5
+		margin-bottom: 37px
 
 .guarantees
 	background-color: #fafafa
@@ -306,12 +305,9 @@ a
 		font-size: 36px
 	&-span
 		font-weight: 900
-
-
 .guarantees-item
-	padding-left: 83px
+	padding-left: 80px
 	position: relative
-	// box-sizing: content-box
 	margin-bottom: 62px
 	&__img
 		position: absolute
@@ -333,19 +329,11 @@ a
 			text-transform: uppercase
 	&__span--32
 		font-size: 32px
-		line-height: 1.2
+		line-height: normal
 	&__span--24
 		font-size: 24px
-		line-height: 1.2
+		line-height: normal
 
-			
-.guarantees-item__span
-	&--32
-		font-size: 32px
-		line-height: normal
-	&--24
-		font-size: 24px
-		line-height: normal
 
 .howwork, 
 .review
