--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -24,6 +24,7 @@ a
 	&-active
 		background-color: rgba(0, 0, 0, .8)
 		padding: 5px 0
+		min-height: 57px
 	&-container
 		position: relative
 		display: flex
@@ -355,7 +356,6 @@ a
 		font-size: 16px
 		margin-bottom: 35px
 		line-height: 1.5
-
 .question-form
 	display: flex
 	&-wrap
@@ -363,7 +363,6 @@ a
 		flex-wrap: wrap
 		flex-direction: column
 		justify-content: space-between
-
 .question-input
 	font-size: 12px
 	font-family: OpenSans
@@ -376,7 +375,6 @@ a
 .form-wrap
 	display: flex
 	flex-wrap: wrap
-
 .form-wrap__col
 	width: 50%
 	display: flex
@@ -423,13 +421,17 @@ a
 	&-posttext
 		margin-left: 20px
 		margin-bottom: 30px
+		position: relative
 		&:before
 			content: ''
 			background: url(../img/stick.png)
 			width: 2px
-			height: 68px
+			// height: 68px
 			position: absolute
-			left: 0
+			left: -20px
+			top: 0
+			bottom: 0
+			margin: auto
 	&-sign
 		margin-left: 300px
 		// margin-bottom: 70px
@@ -511,6 +513,7 @@ a
 
 .howwork-item-img
 	margin-bottom: 24px
+	position: relative
 	&__text
 		font-size: 45.84px
 		font-weight: 500
@@ -698,7 +701,7 @@ a
 	background-color: #fafafa
 	color: black
 	padding: 75px 0 50px
-	max-height: 690px
+	// max-height: 690px
 
 .top7-content
 	position: relative
@@ -714,9 +717,9 @@ a
 .top7-acords
 	padding-left: 35px
 	counter-reset: section
-	max-height: 410px
+	// max-height: 410px
 	overflow: scroll
-	margin-bottom: 25px
+	// margin-bottom: 25px
 	overflow: hidden
 
 .acord-head
@@ -873,14 +876,13 @@ a
 		font-size: 12px
 		font-weight: 700
 		line-height: 2.25
-	&-adress 
+	&-subtext 
 		font-family: OpenSans
 		font-size: 14px
 		line-height: 1.929
 		text-align: left
 
-.btn-marker
-	padding: 16px 77px
+.marker-btn
 	white-space: nowrap
 	letter-spacing: 0.05em
 	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15)
