--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -752,6 +752,11 @@
 
 @media only screen and (max-width : 480px)
 
+	.modal label.error
+		right: 40px
+		left: 40px
+
+
 	.hero
 		&-content
 			margin: 80px 0 10px
