--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,6 +13,14 @@ a
 		text-decoration: none
 		border-bottom: 1px solid orange
 
+.modal label.error
+	bottom: -28px
+	top: 25px
+	right: 80px
+	left: 80px
+	background-color: rgba(200, 8, 25, .9)
+	color: #fff
+
 .header
 	position: fixed
 	right: 0
