--- a/app/sass/_base/_form.sass
+++ b/app/sass/_base/_form.sass
@@ -2,6 +2,7 @@
 	label.error
 		position: absolute
 		bottom: -25px
+		// top: 25px
 		right: 25px
 		left: 25px
 		transition: all .3s
@@ -10,7 +11,8 @@
 		text-align: center
 		font-weight: 600
 		background-color: $accent
-		border-radius: 10px
+		// border-radius: 10px
+		padding: 2px
 		&::before
 			content: ''
 			position: absolute
