--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -1,22 +1,23 @@
 .modal
 	position: relative
 	overflow: hidden
-	max-width: 700px
+	max-width: 400px
 	height: auto
-	padding: 50px 150px 40px
+	padding: 30px
 	background-color: #fff
 	z-index: 1
 
 	label.error
 		position: absolute
-		top: -20px
-		right: 0
-		left: 0
+		left: 60px
+		right: 60px
 		transition: all .3s
 		animation: error .3s linear 1 forwards
-		color: red
 		text-align: center
 		font-weight: 400
+		font-size: 12px
+		background-color: rgba(200, 8, 25, .9)
+		color: #fff
 
 	.btn
 		// width: 100%
