--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -30,8 +30,6 @@
 		width: 397px
 
 	.modal
-		max-width: 600px
-		padding: 40px 120px 30px
 		font-size: 13px
 		p 
 			font-size: 11px
@@ -204,13 +202,17 @@
 		display: none
 		width: 350px
 	.modal
-		max-width: 400px
-		padding: 20px 45px 15px
 		font-size: 12px
 		p 	
 			font-size: 10px
 		h3
 			margin-bottom: 20px
+	#thanks 
+		p
+			font-size: 14px
+		h3
+			font-size: 16px
+			margin-bottom: 15px
 	.header .nav
 		position: fixed
 		display: flex
@@ -448,9 +450,15 @@
 			font-size: 10px
 
 	.modal
-		padding: 15px 40px 10px
 		h3
 			margin-bottom: 15px
+
+	#thanks 
+		p
+			font-size: 13px
+		h3
+			font-size: 15px
+			margin-bottom: 10px
 
 	.whywe
 		padding: calc(80px *0.48) 0 24px
@@ -767,7 +775,7 @@
 		&-benefits
 			margin-top: 40px
 	.modal
-		max-width: 320px
+		max-width: 310px
 	.btn-hollow
 		min-width: 240px
 	.footer__form_line input
