--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,14 +13,6 @@ a
 		text-decoration: none
 		border-bottom: 1px solid orange
 
-.modal label.error
-	bottom: -28px
-	top: 25px
-	right: 80px
-	left: 80px
-	background-color: rgba(200, 8, 25, .9)
-	color: #fff
-
 .header
 	position: fixed
 	right: 0
@@ -152,6 +144,20 @@ a
 		color: orange
 		&:hover
 			color: orange
+	p 	
+		font-size: 16px
+		line-height: 1.7
+#thanks 
+	padding: 40px
+	p 
+		text-align: center
+		font-size: 16px
+	h3
+		font-size: 18px
+		font-weight: 700
+		margin-bottom: 20px
+		text-align: center
+		
 .wrapper
 	text-align: center
 .form 
