not yet processed -consultation-

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -278,7 +278,7 @@
 			&-input
 				width: 100%
 				text-align: center
-				margin-bottom: 20px
+				// margin-bottom: 20px
 			&-btn 
 				width: 100%
 
