--- a/app/sass/_base/_form.sass
+++ b/app/sass/_base/_form.sass
@@ -1,18 +1,23 @@
 .form
 	label.error
 		position: absolute
-		bottom: -25px
+		// bottom: -25px
 		// top: 25px
-		right: 25px
-		left: 25px
+		// right: 25px
+		// left: 25px
+		top: 0
+		right: 0
+		left: 0
+		// margin: auto
+		max-width: 300px
 		transition: all .3s
 		animation: error .3s linear 1 forwards
-		color: red
 		text-align: center
 		font-weight: 600
-		background-color: $accent
+		background-color: rgba(200, 8, 25, .9)
+		color: #fff
 		// border-radius: 10px
-		padding: 2px
+		padding: 2px 10px
 		&::before
 			content: ''
 			position: absolute
@@ -26,6 +31,6 @@
 
 	div
 		position: relative
-		margin-bottom: 20px
+		// margin-bottom: 20px
 		&:last-child
 			margin-bottom: 0
