--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -216,26 +216,33 @@ a
 	padding: 90px 0px 99px
 	text-align: center
 	&-title
-		font-size: 36px
+		font-family: OpenSans
+		font-size: 32px
 		margin-bottom: 17px
 		line-height: 1.2
 		text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2)
 		& span
+			font-size: 36px
 			font-weight: 900
 	&-subtitle
 		margin-bottom: 58px
 		font-size: 16px
 		line-height: 1.5
 	&-form
-		&-input
-			margin-right: 30px
-			padding: 13px 20px
-			border-radius: 5px
-			font-weight: 400
-			font-size: 12px
-			border: 2px solid white
+		display: flex
+		justify-content: center
+		&-item
+			margin: 0 15px
 			min-width: 270px
-	
+		&-input
+			border-radius: 5px
+			background-color: rgb(255, 255, 255)
+			box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.15)
+			font-size: 12px
+			color: rgb(128, 128, 128)
+			text-align: left
+			padding: 16px 20px
+
 
 .decide
 	color: black
